[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "vibe"
version = "0.1.0"
[tool.poetry.dependencies]
DiscordUtils = "^1.3.4"
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
discord = "^1.7.3"
discord-voice = "^0.1.0"
python = "^3.8"
youtube_dl = "^2021.6.6"
[tool.poetry.dev-dependencies]
