[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "vibe"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
discord = "^1.7.3"
discord-voice = "^0.1.0"
python = "^3.8"
motor = "^2.5.1"
dnspython = "^2.1.0"
youtube_dl = "^2021.12.17"
[tool.poetry.dev-dependencies]
